fixed json mapping issues